RESOLVED FIXED39776
[Qt] FileChooserQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39776
Summary [Qt] FileChooserQt.cpp has coding-style errors
Anders Bakken
Reported 2010-05-26 13:36:36 PDT
WebCore/platform/qt/FileChooserQt.cpp:25: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 1 files
Attachments
Patch that fixes the coding style issues (967 bytes, patch)
2010-05-26 14:45 PDT, Anders Bakken
no flags
Patch (1.00 KB, patch)
2010-06-04 20:20 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 14:45:46 PDT
Created attachment 57157 [details] Patch that fixes the coding style issues
Petri Ojala
Comment 2 2010-05-26 21:51:28 PDT
QtTriaged
David Levin
Comment 3 2010-05-27 11:13:10 PDT
Comment on attachment 57157 [details] Patch that fixes the coding style issues > No new tests. (OOPS!) Ditto.
Anders Bakken
Comment 4 2010-06-04 20:20:14 PDT
WebKit Commit Bot
Comment 5 2010-06-05 04:04:25 PDT
Comment on attachment 57952 [details] Patch Clearing flags on attachment: 57952 Committed r60748: <http://trac.webkit.org/changeset/60748>
WebKit Commit Bot
Comment 6 2010-06-05 04:04:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.