2010-06-05  Anders Bakken  <agbakken@gmail.com>

Reviewed by Eric Seidel.

        [Qt] FileChooserQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39776

        * platform/qt/FileChooserQt.cpp:

Canonical link: https://commits.webkit.org/51771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60748 268f45cc-cd09-0410-ab3c-d52691b4dbfc